// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Status render not state 1`] = `
<View
  style={
    [
      {
        "borderRadius": 4,
        "paddingHorizontal": 6,
        "paddingVertical": 2,
      },
      {
        "backgroundColor": "#F2F4F7",
      },
      undefined,
    ]
  }
>
  <Text
    allowFontScaling={true}
    style={
      [
        {
          "color": "#5E6678",
          "fontFamily": "Inter-Regular",
          "fontSize": 10,
          "lineHeight": 14,
          "minHeight": 14,
        },
        undefined,
      ]
    }
  >
    text
  </Text>
</View>
`;

exports[`Status render type dot blue 1`] = `
<View
  style={
    [
      {
        "borderRadius": 4,
        "height": 8,
        "width": 8,
      },
      {
        "backgroundColor": "#2B78EE",
      },
      undefined,
    ]
  }
/>
`;

exports[`Status render type dot gray 1`] = `
<View
  style={
    [
      {
        "borderRadius": 4,
        "height": 8,
        "width": 8,
      },
      {
        "backgroundColor": "#D0D6E0",
      },
      undefined,
    ]
  }
/>
`;

exports[`Status render type dot green 1`] = `
<View
  style={
    [
      {
        "borderRadius": 4,
        "height": 8,
        "width": 8,
      },
      {
        "backgroundColor": "#29A35C",
      },
      {
        "flex": 1,
      },
    ]
  }
/>
`;

exports[`Status render type dot orange 1`] = `
<View
  style={
    [
      {
        "borderRadius": 4,
        "height": 8,
        "width": 8,
      },
      {
        "backgroundColor": "#FAB742",
      },
      undefined,
    ]
  }
/>
`;

exports[`Status render type dot red 1`] = `
<View
  style={
    [
      {
        "borderRadius": 4,
        "height": 8,
        "width": 8,
      },
      {
        "backgroundColor": "#F54D3D",
      },
      undefined,
    ]
  }
/>
`;

exports[`Status render type tag blue 1`] = `
<View
  style={
    [
      {
        "borderRadius": 4,
        "paddingHorizontal": 6,
        "paddingVertical": 2,
      },
      {
        "backgroundColor": "rgba(43, 120, 238, 0.15)",
      },
      {
        "flex": 1,
      },
    ]
  }
>
  <Text
    allowFontScaling={true}
    style={
      [
        {
          "color": "#2B78EE",
          "fontFamily": "Inter-Regular",
          "fontSize": 10,
          "lineHeight": 14,
          "minHeight": 14,
        },
        undefined,
      ]
    }
  >
    text
  </Text>
</View>
`;

exports[`Status render type tag gray 1`] = `
<View
  style={
    [
      {
        "borderRadius": 4,
        "paddingHorizontal": 6,
        "paddingVertical": 2,
      },
      {
        "backgroundColor": "#F2F4F7",
      },
      undefined,
    ]
  }
>
  <Text
    allowFontScaling={true}
    style={
      [
        {
          "color": "#5E6678",
          "fontFamily": "Inter-Regular",
          "fontSize": 10,
          "lineHeight": 14,
          "minHeight": 14,
        },
        undefined,
      ]
    }
  >
    text
  </Text>
</View>
`;

exports[`Status render type tag green 1`] = `
<View
  style={
    [
      {
        "borderRadius": 4,
        "paddingHorizontal": 6,
        "paddingVertical": 2,
      },
      {
        "backgroundColor": "rgba(58, 189, 112, 0.1)",
      },
      undefined,
    ]
  }
>
  <Text
    allowFontScaling={true}
    style={
      [
        {
          "color": "#29A35C",
          "fontFamily": "Inter-Regular",
          "fontSize": 10,
          "lineHeight": 14,
          "minHeight": 14,
        },
        undefined,
      ]
    }
  >
    text
  </Text>
</View>
`;

exports[`Status render type tag orange 1`] = `
<View
  style={
    [
      {
        "borderRadius": 4,
        "paddingHorizontal": 6,
        "paddingVertical": 2,
      },
      {
        "backgroundColor": "rgba(250, 146, 71, 0.1)",
      },
      undefined,
    ]
  }
>
  <Text
    allowFontScaling={true}
    style={
      [
        {
          "color": "#FE8027",
          "fontFamily": "Inter-Regular",
          "fontSize": 10,
          "lineHeight": 14,
          "minHeight": 14,
        },
        undefined,
      ]
    }
  >
    text
  </Text>
</View>
`;

exports[`Status render type tag red 1`] = `
<View
  style={
    [
      {
        "borderRadius": 4,
        "paddingHorizontal": 6,
        "paddingVertical": 2,
      },
      {
        "backgroundColor": "rgba(249, 97, 84, 0.1)",
      },
      undefined,
    ]
  }
>
  <Text
    allowFontScaling={true}
    style={
      [
        {
          "color": "#F54C3D",
          "fontFamily": "Inter-Regular",
          "fontSize": 10,
          "lineHeight": 14,
          "minHeight": 14,
        },
        undefined,
      ]
    }
  >
    text
  </Text>
</View>
`;
